--- a/package.json
+++ b/package.json
@@ -1,53 +1,47 @@
 {
   "name": "phuocpro8199.github.io",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "homepage": "https://phuocpro8199.github.io",
   "scripts": {
     "predeploy": "pnpm build",
-    "deploy": "gh-pages -d build",
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.0.2",
-    "@react-router/node": "^7.5.1",
-    "@react-router/serve": "^7.5.1",
+    "@ant-design/icons": "^6.0.0",
+    "@tailwindcss/vite": "^4.1.4",
     "antd": "^5.24.7",
     "html2canvas-pro": "^1.5.8",
-    "isbot": "^5.1.17",
     "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
-    "react-compiler-runtime": "19.0.0-beta-ebf51a3-20250411",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.1"
+    "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.1",
+    "tailwindcss": "^4.1.4",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.1",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/jspdf": "^2.0.0",
-    "@types/lodash": "^4.17.16",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.0.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "@eslint/js": "^9.22.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-sort-imports": "^1.8.7",
+    "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.3.1"
   }
 }
